fix:menu overlapping in the home page - for user experience

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -211,7 +211,6 @@ nav a:hover span {
 	position: fixed;
 	top: 20px;
 	display: none;
-	z-index: 4;
 }
 
 #hamburger input {
@@ -306,7 +305,6 @@ nav a:hover span {
 #nav-menu {
 	display: none;
 	transition: opacity 0.4s ease;
-	z-index: 4;
 }
 
 .menu-toggle:checked + .hamburger #bar1 {
@@ -398,6 +396,10 @@ nav a:hover span {
 @media (max-width: 768px) {
 	#hamburger {
 		display: block;
+	}
+
+	.banner-container {
+		margin-top: 10%;
 	}
 
 	nav {
